--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "noImplicitThis": false,
     "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
